Styled the Scorers table as contrast issue seems to have been resolved so troubleshooting to ensure it's consistent.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -23,6 +23,7 @@ ul {
 /* Header */
 header {
     background-color: black;
+    color: white;
     width: 100%;
     display: flex;
     position: fixed;
@@ -133,7 +134,7 @@ div {
 /* Styles for the Trophy div */
 #trophies {
     background-color: rgba(192, 192, 192, 0.5);
-    color: rgb(12, 32, 105);
+    color: navy;
     text-align: center;
     padding: 1rem;
 }
